[gd_scene load_steps=4 format=2]

[ext_resource path="res://images/level1/horno.png" type="Texture" id=1]
[ext_resource path="res://Obj.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.3867, 34.742 )

[node name="Obj" type="Sprite"]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 230.406, 145.147 )
z_index = 1
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
[connection signal="change_drag" from="." to="." method="_on_Obj_change_drag"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
